[package]
name = "volvelle-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "volvelle_wasm"
path = "src/lib.rs"
crate-type = [ "cdylib" ]

[dependencies]
js-sys = { version = "0.3", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false, features = [ "std" ] }

